--- a/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
+++ b/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
@@ -32,9 +32,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ConsoleUI.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Ex03.GarageLogic, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Ex03.GarageLogic\bin\Debug\Ex03.GarageLogic.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
