--- a/C17 Ex03 Or 200337251 Naor 301032157/Ex03.GarageLogic/Ex03.GarageLogic.csproj
+++ b/C17 Ex03 Or 200337251 Naor 301032157/Ex03.GarageLogic/Ex03.GarageLogic.csproj
@@ -35,10 +35,15 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CustomerData.cs" />
     <Compile Include="Engine\ElectricEngine.cs" />
     <Compile Include="Engine\Engine.cs" />
     <Compile Include="Engine\FuelEngine.cs" />
+    <Compile Include="enums\eFuelType.cs" />
     <Compile Include="enums\eVehicleType.cs" />
+    <Compile Include="eVehicleStatus.cs" />
+    <Compile Include="Garage.cs" />
+    <Compile Include="ValueOutOfRangeException.cs" />
     <Compile Include="VehicleFactory.cs" />
     <Compile Include="Vehicles\Car.cs" />
     <Compile Include="enums\eCarColor.cs" />
