--- a/C17 Ex03 Or 200337251 Naor 301032157/Ex03.GarageLogic/Ex03.GarageLogic.csproj
+++ b/C17 Ex03 Or 200337251 Naor 301032157/Ex03.GarageLogic/Ex03.GarageLogic.csproj
@@ -39,10 +39,11 @@
     <Compile Include="Engine\ElectricEngine.cs" />
     <Compile Include="Engine\Engine.cs" />
     <Compile Include="Engine\FuelEngine.cs" />
+    <Compile Include="enums\eCarPropertyType.cs" />
     <Compile Include="enums\eFuelType.cs" />
     <Compile Include="enums\eVehicleType.cs" />
     <Compile Include="enums\eVehicleStatus.cs" />
-    <Compile Include="Garage.cs" />
+    <Compile Include="GarageServices.cs" />
     <Compile Include="ValueOutOfRangeException.cs" />
     <Compile Include="VehicleFactory.cs" />
     <Compile Include="Vehicles\Car.cs" />
