Added template parcer classes and enums, edited ConsoleUI class

--- a/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
+++ b/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
@@ -33,7 +33,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ConsoleUI.cs" />
+    <Compile Include="eFilterStatusOptions.cs" />
+    <Compile Include="eGarageSystemOptions.cs" />
+    <Compile Include="FloatParcer.cs" />
+    <Compile Include="IntParcer.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="PropertyParcer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Ex03.GarageLogic, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
