Update classes with the values by Guy's definition, change Engine ctor, we need to check why is there an engine in Vehicle base class

--- a/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
+++ b/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
@@ -34,7 +34,7 @@
   <ItemGroup>
     <Compile Include="ConsoleUI.cs" />
     <Compile Include="eFilterStatusOptions.cs" />
-    <Compile Include="eGarageSystemOptions.cs" />
+    <Compile Include="eGarageSystemServices.cs" />
     <Compile Include="FloatParcer.cs" />
     <Compile Include="IntParcer.cs" />
     <Compile Include="Program.cs" />
