Logic is almost finished.

--- a/C17 Ex03 Or 200337251 Naor 301032157/Ex03.GarageLogic/Ex03.GarageLogic.csproj
+++ b/C17 Ex03 Or 200337251 Naor 301032157/Ex03.GarageLogic/Ex03.GarageLogic.csproj
@@ -43,6 +43,7 @@
     <Compile Include="enums\eFuelType.cs" />
     <Compile Include="enums\eVehicleType.cs" />
     <Compile Include="enums\eVehicleStatus.cs" />
+    <Compile Include="GarageConstants.cs" />
     <Compile Include="GarageServices.cs" />
     <Compile Include="ValueOutOfRangeException.cs" />
     <Compile Include="VehicleFactory.cs" />
