The logic is pretty much done. I did a lot of work on the UI too to make it easier on you. Notice There is a lot of duplicate code  in the menu(on purpose), it is only so you can understand what's going on and what is what. Should be edited. You should add validation and Exception Handeling where needed. Read carfeully what he wants in the pdf... Check the method loadGarageSystem in GarageUI - This is a preperation for a menu...

--- a/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
+++ b/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
@@ -32,10 +32,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="ConsoleUI.cs" />
+    <Compile Include="GarageUI.cs" />
     <Compile Include="eFilterStatusOptions.cs" />
     <Compile Include="eGarageSystemServices.cs" />
     <Compile Include="FloatParcer.cs" />
+    <Compile Include="GarageUIUtils.cs" />
     <Compile Include="IntParcer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="PropertyParcer.cs" />
