Edited ConsoleUIUtils, GarageSystemServices

--- a/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
+++ b/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
@@ -32,14 +32,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="FloatValidator.cs" />
     <Compile Include="GarageUI.cs" />
     <Compile Include="eFilterStatusOptions.cs" />
     <Compile Include="eGarageSystemServices.cs" />
-    <Compile Include="FloatParcer.cs" />
     <Compile Include="GarageUIUtils.cs" />
-    <Compile Include="IntParcer.cs" />
+    <Compile Include="IntValidator.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="PropertyParcer.cs" />
+    <Compile Include="PropertyValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Ex03.GarageLogic, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
