edit some files Or & Naor

--- a/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
+++ b/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
@@ -34,8 +34,7 @@
   <ItemGroup>
     <Compile Include="FloatValidator.cs" />
     <Compile Include="GarageUI.cs" />
-    <Compile Include="eFilterStatusOptions.cs" />
-    <Compile Include="eGarageSystemServices.cs" />
+    <Compile Include="eGarageServicesMenuOptions.cs" />
     <Compile Include="GarageUIUtils.cs" />
     <Compile Include="IntValidator.cs" />
     <Compile Include="Program.cs" />
