--- a/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
+++ b/C17 Ex03 Or 200337251 Naor 301032157/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
@@ -34,7 +34,9 @@
   <ItemGroup>
     <Compile Include="FloatValidator.cs" />
     <Compile Include="GarageUI.cs" />
-    <Compile Include="eGarageServicesMenuOptions.cs" />
+    <Compile Include="eGarageServicesMenuOptions.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="GarageUIUtils.cs" />
     <Compile Include="IntValidator.cs" />
     <Compile Include="Program.cs" />
