--- a/C17 Ex03 Or 200337251 Naor 301032157/Ex03.GarageLogic/Ex03.GarageLogic.csproj
+++ b/C17 Ex03 Or 200337251 Naor 301032157/Ex03.GarageLogic/Ex03.GarageLogic.csproj
@@ -36,37 +36,36 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CustomerData.cs" />
-    <Compile Include="Engine\ElectricEngine.cs" />
-    <Compile Include="Engine\Engine.cs" />
-    <Compile Include="Engine\FuelEngine.cs" />
-    <Compile Include="enums\eFuelType.cs" />
-    <Compile Include="enums\eVehicleType.cs" />
-    <Compile Include="enums\eVehicleStatus.cs" />
+    <Compile Include="ElectricEngine.cs" />
+    <Compile Include="Engine.cs" />
+    <Compile Include="FuelEngine.cs" />
+    <Compile Include="eFuelType.cs" />
+    <Compile Include="eVehicleType.cs" />
+    <Compile Include="eVehicleStatus.cs" />
     <Compile Include="GarageConstants.cs" />
     <Compile Include="GarageServices.cs" />
     <Compile Include="ValueOutOfRangeException.cs" />
     <Compile Include="VehicleFactory.cs" />
-    <Compile Include="Vehicles\Car.cs" />
-    <Compile Include="enums\eCarColor.cs" />
-    <Compile Include="enums\eMotorcylceLicenseType.cs" />
-    <Compile Include="enums\eNumDoorsInCar.cs" />
-    <Compile Include="Vehicles\ElectricCar.cs" />
-    <Compile Include="Vehicles\ElectricMotorcycle.cs" />
-    <Compile Include="Vehicles\FuelCar.cs" />
-    <Compile Include="Vehicles\FuelMotorcycle.cs" />
-    <Compile Include="Vehicles\FuelTruck.cs" />
-    <Compile Include="Vehicles\Motorcycle.cs" />
-    <Compile Include="Vehicles\Truck.cs" />
-    <Compile Include="Vehicles\Vehicle.cs" />
+    <Compile Include="Car.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="eCarColor.cs" />
+    <Compile Include="eMotorcylceLicenseType.cs" />
+    <Compile Include="eNumDoorsInCar.cs" />
+    <Compile Include="ElectricCar.cs" />
+    <Compile Include="ElectricMotorcycle.cs" />
+    <Compile Include="FuelCar.cs" />
+    <Compile Include="FuelMotorcycle.cs" />
+    <Compile Include="FuelTruck.cs" />
+    <Compile Include="Motorcycle.cs" />
+    <Compile Include="Truck.cs" />
+    <Compile Include="Vehicle.cs" />
     <Compile Include="Wheel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
-    <None Include="ClassDiagram3.cd" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
